--- a/config/influx.conf
+++ b/config/influx.conf
@@ -1,104 +1,88 @@
-# Welcome to the InfluxDB configuration file.
+reporting-disabled = true
 
-# If hostname (on the OS) doesn't return a name that can be resolved by the other
-# systems in the cluster, you'll have to set the hostname to an IP or something
-# that can be resolved here.
-# hostname = ""
-bind-address = "0.0.0.0"
+[meta]
+  dir = "/data/meta"
+  hostname = "localhost"
+  bind-address = ":8088"
+  retention-autocreate = true
+  election-timeout = "1s"
+  heartbeat-timeout = "1s"
+  leader-lease-timeout = "500ms"
+  commit-timeout = "50ms"
 
-# Once every 24 hours InfluxDB will report anonymous data to m.influxdb.com
-# The data includes raft id (random 8 bytes), os, arch and version
-# We don't track ip addresses of servers reporting. This is only used
-# to track the number of instances running and the versions, which
-# is very helpful for us.
-# Change this option to true to disable reporting.
-reporting-disabled = false
-
-# Controls settings for initial start-up. Once a node a successfully started,
-# these settings are ignored.
-[initialization]
-join-urls = "" # Comma-delimited URLs, in the form http://host:port, for joining another cluster. 
-
-# Control authentication
-# If not set authetication is DISABLED. Be sure to explicitly set this flag to
-# true if you want authentication.
-[authentication]
-enabled = false
-
-# Configure the admin server
-[admin]
-enabled = true
-port = 8083
-
-# Configure the HTTP API endpoint. All time-series data and queries uses this endpoint.
-[api]
-# ssl-port = 8087    # SSL support is enabled if you set a port and cert
-# ssl-cert = "/path/to/cert.pem"
-
-# Configure the Graphite plugins.
-[[graphite]] # 1 or more of these sections may be present.
-enabled = false
-# protocol = "" # Set to "tcp" or "udp"
-# address = "0.0.0.0" # If not set, is actually set to bind-address.
-# port = 2003
-# name-position = "last"
-# name-separator = "-"
-# database = ""  # store graphite data in this database
-
-# Configure the collectd input.
-[collectd]
-enabled = false
-#address = "0.0.0.0" # If not set, is actually set to bind-address.
-#port = 25827
-#database = "collectd_database"
-#typesdb = "types.db"
-
-# Configure UDP listener for series data.
-[udp]
-enabled = false
-#bind-address = "0.0.0.0"
-#port = 4444
-
-# Broker configuration. Brokers are nodes which participate in distributed
-# consensus.
-[broker]
-# Where the Raft logs are stored. The user running InfluxDB will need read/write access.
-dir  = "/data/raft"
-port = 8086
-
-# Data node configuration. Data nodes are where the time-series data, in the form of
-# shards, is stored.
 [data]
-  dir = "/data/db"
-  port = 8086
-
-  # Auto-create a retention policy when a database is created. Defaults to true.
+  dir = "/data/data"
   retention-auto-create = true
-
-  # Control whether retention policies are enforced and how long the system waits between
-  # enforcing those policies.
   retention-check-enabled = true
-  retention-check-period = "10m"
+  retention-check-period = "10m0s"
+  retention-create-period = "45m0s"
+
+[snapshot]
+  enabled = true
 
 [cluster]
-# Location for cluster state storage. For storing state persistently across restarts.
-dir = "/data/state"
+  shard-writer-timeout = "5s"
 
-# Configuration for snapshot endpoint.
-[snapshot]
-enabled = true # Enabled by default if not set.
-bind-address = "127.0.0.1"
-port = 8087
+[retention]
+  enabled = true
+  check-interval = "10m0s"
 
-[logging]
-write-tracing = false # If true, enables detailed logging of the write system.
-raft-tracing = false # If true, enables detailed logging of Raft consensus.
+[shard-precreation]
+  enabled = true
+  check-interval = "10m0s"
+  advance-period = "30m0s"
 
-# InfluxDB can store statistics about itself. This is useful for monitoring purposes.
-# This feature is disabled by default, but if enabled, these statistics can be queried
-# as any other data.
-[statistics]
-enabled = false
-database = "_internal"         # The database to which the data is written.
-retention-policy = "default"   # The retention policy within the database.
-write-interval = "1m"          # Period between writing the data.
+[admin]
+  enabled = true
+  bind-address = ":8083"
+
+[http]
+  enabled = true
+  bind-address = ":8086"
+  auth-enabled = false
+  log-enabled = true
+  write-tracing = false
+  pprof-enabled = false
+
+[collectd]
+  enabled = false
+  bind-address = ":25826"
+  database = "collectd"
+  retention-policy = ""
+  batch-size = 5000
+  batch-timeout = "10s"
+  typesdb = "/usr/share/collectd/types.db"
+
+[opentsdb]
+  enabled = false
+  bind-address = ":4242"
+  database = "opentsdb"
+  retention-policy = ""
+  consistency-level = "one"
+
+[udp]
+  enabled = false
+  bind-address = ""
+  database = ""
+  batch-size = 0
+  batch-timeout = "0"
+
+[monitoring]
+  enabled = false
+  write-interval = "1m0s"
+
+[continuous_queries]
+  enabled = true
+  recompute-previous-n = 2
+  recompute-no-older-than = "10m0s"
+  compute-runs-per-interval = 10
+  compute-no-more-than = "2m0s"
+
+[hinted-handoff]
+  enabled = true
+  dir = "/data/hh"
+  max-size = 1073741824
+  max-age = "168h0m0s"
+  retry-rate-limit = 0
+  retry-interval = "1s"
+
