--- a/config/influx.conf
+++ b/config/influx.conf
@@ -9,23 +9,30 @@ reporting-disabled = true
   heartbeat-timeout = "1s"
   leader-lease-timeout = "500ms"
   commit-timeout = "50ms"
+  cluster-tracing = false
 
 [data]
   dir = "/data/data"
-  retention-auto-create = true
-  retention-check-enabled = true
-  retention-check-period = "10m0s"
-  retention-create-period = "45m0s"
-
-[snapshot]
-  enabled = true
+  max-wal-size = 104857600
+  wal-flush-interval = "10m0s"
+  wal-partition-flush-delay = "2s"
+  wal-dir = "/data/wal"
+  wal-logging-enabled = true
+  wal-ready-series-size = 30720
+  wal-compaction-threshold = 0.5
+  wal-max-series-size = 1048576
+  wal-flush-cold-interval = "5s"
+  wal-partition-size-threshold = 20971520
 
 [cluster]
+  force-remote-mapping = false
+  write-timeout = "5s"
   shard-writer-timeout = "5s"
+  shard-mapper-timeout = "5s"
 
 [retention]
   enabled = true
-  check-interval = "10m0s"
+  check-interval = "30m0s"
 
 [shard-precreation]
   enabled = true
@@ -35,6 +42,13 @@ reporting-disabled = true
 [admin]
   enabled = true
   bind-address = ":8083"
+  https-enabled = false
+  https-certificate = "/data/influxdb.pem"
+
+[monitor]
+  store-enabled = true
+  store-database = "_internal"
+  store-interval = "10s"
 
 [http]
   enabled = true
@@ -43,35 +57,21 @@ reporting-disabled = true
   log-enabled = true
   write-tracing = false
   pprof-enabled = false
+  https-enabled = false
+  https-certificate = "/data/influxdb.pem"
 
 [collectd]
   enabled = false
   bind-address = ":25826"
   database = "collectd"
   retention-policy = ""
-  batch-size = 5000
+  batch-size = 1000
+  batch-pending = 5
   batch-timeout = "10s"
   typesdb = "/usr/share/collectd/types.db"
 
-[opentsdb]
-  enabled = false
-  bind-address = ":4242"
-  database = "opentsdb"
-  retention-policy = ""
-  consistency-level = "one"
-
-[udp]
-  enabled = false
-  bind-address = ""
-  database = ""
-  batch-size = 0
-  batch-timeout = "0"
-
-[monitoring]
-  enabled = false
-  write-interval = "1m0s"
-
 [continuous_queries]
+  log-enabled = true
   enabled = true
   recompute-previous-n = 2
   recompute-no-older-than = "10m0s"
